Add DhcpClient. Remove dependency on odhcploc
Add a class that acts as a DHCP client.
Useful for obtaining some info from the DHCP server such as
what the domain name used inside the network is.

Also use this to detect the presence of other DHCP servers
inside the network if user selected standalone DHCP server mode.
Removes dependency on odhcploc.

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.9.7
 
 Package: piserver
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, gksu, binfmt-support [!armhf], qemu-user-static [!armhf], odhcploc
+Depends: ${shlibs:Depends}, ${misc:Depends}, gksu, binfmt-support [!armhf], qemu-user-static [!armhf]
 Description: Utility program to manage a network of diskless Pi 3 terminals
  Lets diskless Pi 3 terminals PXE boot from the network.
