Add minimal support for external LDAP/AD servers
- Adds page to installation wizard to ask wheter user likes to
  create users with Piserver or use an external auth server.
- If user selects he wants to use external server Piserver will
  do a quick attempt to auto-detect the location of said server.
  This is done by trying to obtain the logon domain from DHCP server.
  And asking DNS server for _ldap._tcp SRV records.
  This should be able to auto-detect the server in all Windows Server
  environements. As long as Windows is playing DHCP server and the
  user didn't add a separate router in between.
- When AD is used, user accounts are expected to reside under the
  default "cn=users" container.
  UNIX user ids are derived from AD objectSID. Derived user number
  must be >1000 (logging in with the first Windows Administrator
  account may not work due to this. But all user accounts should)
- User's home directory is created upon first login by pam_mkhomedir
- Minimal implementation with following limitations:
  * No add/delete user functionality is offered
  when using external server. User should use existing tools for that.
  * Currently no option to change external auth server after
    installation is offered. Must "apt-get remove --purge piserver"
    and reinstall for that.

Ref #2
Ref #9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,13 @@ endif()
 # for crypt_r()
 find_library(CRYPT_LIBRARY crypt)
 
+# for resolving SRV DNS records
+find_library(RESOLV_LIBRARY resolv)
+
 aux_source_directory(src SRC_LIST)
 add_executable(${PROJECT_NAME} ${SRC_LIST} resources.c)
 target_link_libraries(${PROJECT_NAME} ${GTKMM_LIBRARIES} ${LDAP_LIBRARY}
-    ${CRYPT_LIBRARY} ${CURL_LIBRARY} ${LibArchive_LIBRARIES} Threads::Threads)
+    ${CRYPT_LIBRARY} ${RESOLV_LIBRARY} ${CURL_LIBRARY} ${LibArchive_LIBRARIES} Threads::Threads)
 
 # Languages
 
@@ -69,5 +72,5 @@ install(DIRECTORY DESTINATION /var/lib/piserver/os)
 install(DIRECTORY DESTINATION /var/lib/piserver/tftproot)
 install(DIRECTORY DESTINATION /var/lib/piserver/scripts)
 install(PROGRAMS scripts/postinstall.sh scripts/convert.sh scripts/chroot_image.sh DESTINATION /var/lib/piserver/scripts)
-install(FILES scripts/convert_chrooted_cmds DESTINATION /var/lib/piserver/scripts)
+install(FILES scripts/convert_chrooted_cmds scripts/mkhomedir-piserver DESTINATION /var/lib/piserver/scripts)
 install(FILES scripts/50-piserver-dhcpcd-hook DESTINATION /lib/dhcpcd/dhcpcd-hooks)
