Add 'clone OS' button
Allow user to have multiple (customized) instances of
a single operating system.

Fixes #17

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ set(RESOURCE_LIST
     data/edituserdialog.glade
     data/adddistrodialog.glade
     data/addfolderdialog.glade
+    data/clonedistrodialog.glade
     )
 
 compile_gresources(RESOURCE_FILE
