Remove dependency on gksudo
Try if passwordless sudo is allowed first.
If not let pkexec ask for password.
Add policy file to let piserver have access to DISPLAY env variable.

Bit hacky, but gets the job done.

Fixes #27

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ add_custom_target(resource ALL DEPENDS ${RESOURCE_FILE})
 
 install(TARGETS piserver DESTINATION bin)
 install(FILES data/piserver.desktop DESTINATION share/applications)
+install(FILES data/org.raspberrypi.piserver.policy DESTINATION share/polkit-1/actions)
 install(DIRECTORY DESTINATION /var/lib/piserver)
 install(DIRECTORY DESTINATION /var/lib/piserver/os)
 install(DIRECTORY DESTINATION /var/lib/piserver/os/shared)
