--- a/data/piserver.desktop
+++ b/data/piserver.desktop
@@ -6,3 +6,4 @@ Comment=Server for diskless Pi 3
 Icon=folder-remote
 Exec=sh -c "sudo piserver || pkexec piserver"
 Categories=Settings
+StartupNotify=false
