--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,10 +28,29 @@ find_library(CRYPT_LIBRARY crypt)
 # for resolving SRV DNS records
 find_library(RESOLV_LIBRARY resolv)
 
+# test if we need libatomic
+include(CheckCXXSourceCompiles)
+check_cxx_source_compiles("
+    #include <atomic>
+    #include <stdint.h>
+    int main() {
+	std::atomic<int64_t> x;
+	x = 1;
+	return (int) x;
+    }"
+    atomicbuiltin)
+
+if (NOT atomicbuiltin)
+	find_library(ATOMIC_LIBRARY NAMES atomic libatomic.so.1)
+	if (NOT ATOMIC_LIBRARY)
+		message( FATAL_ERROR "Missing libatomic while architecture does need it" )
+	endif()
+endif()
+
 aux_source_directory(src SRC_LIST)
 add_executable(${PROJECT_NAME} ${SRC_LIST} resources.c)
 target_link_libraries(${PROJECT_NAME} ${GTKMM_LIBRARIES} ${LDAP_LIBRARY}
-    ${CRYPT_LIBRARY} ${RESOLV_LIBRARY} ${CURL_LIBRARY} ${LibArchive_LIBRARIES} Threads::Threads)
+    ${CRYPT_LIBRARY} ${RESOLV_LIBRARY} ${CURL_LIBRARY} ${LibArchive_LIBRARIES} ${ATOMIC_LIBRARY} Threads::Threads)
 
 # Languages
 
