External LDAP/AD server: allow restricting access by user group
Both in the forum and on Github some interest has been expressed
to be able to restrict Piserver access to certain user groups,
instead of allowing the entire school to access.

Add a setting to GUI to specify a group during
initial installation.

Ref: #73

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ set(RESOURCE_LIST
     data/adddistrodialog.glade
     data/addfolderdialog.glade
     data/clonedistrodialog.glade
+    data/ldapsettingsdialog.glade
     )
 
 compile_gresources(RESOURCE_FILE
